tests/procedure_call/unclosed_left.ast.err
Error: Unexpected token in input, expected <expression>, end of input
   ╭─[tests/procedure_call/unclosed_left.scm:1:3]
   │
 1 │ 32)
   ·   ┬  
   ·   ╰── Unexpected token )
───╯
