tests/procedure_call/unclosed_left.token
[
    (
        Primitive(
            Integer(
                32,
            ),
        ),
        Source(
            "32",
        ),
    ),
    (
        Keyword(
            ")",
        ),
        Source(
            ")",
        ),
    ),
]